changed font size and color

--- a/analogsea.html
+++ b/analogsea.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="analogSea.css">
 
-	<title>AnalogSea</title>
+	<title>AnalogSea sign up page</title>
 
 </head>
 
@@ -24,14 +24,14 @@
 				<button type="submit">Sign up</button>
 			</div>
 			<div class="forgot">
-				<a href="forgotpsw">Forgot Password?</a>
+				<a href="/forgotpassword/new">Forgot Password?</a>
 			</div>
 
 			</fieldset>
 		</form>
 		</section>
 		<section class="login">
-			<p>Already have an account?<a href="/login/">Log in</a></p>
+			<p>Already have an account?<a href="/login">Log in</a></p>
 		</section>
 
 		
